# KursPy1

./: .env_template  README.md  pyproject.toml  report_results.txt  test_log.txt
src/: report.py  services.py  utils.py  views.py
tests/: conftest.py  test_report.py  test_services.py  test_utils.py  test_views.py
